--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-email/render": "^1.3.2",
     "framer-motion": "^12.23.19",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-photo-album": "^3.1.0",
+    "resend": "^6.1.2",
     "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
